# Digital-Citizen-Charter-Api

./: .dockerignore  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  Dockerfile  LICENSE  README.md  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint-and-test.yml  publish.yml
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  entrypoint.test.sh
employee/: admin.py  apps.py  forms.py  models.py  schema.py  signals.py  tests.py  types.py
employee/migrations/: 0001_initial.py  0002_employee_organization.py  0003_alter_employee_designation.py  0004_employee_department.py  0005_employee_description.py  0006_rename_description_employee_remarks.py  0007_rename_remarks_employee_description.py  0008_employee_profile_picture_url.py  0009_remove_employee_profile_picture_url.py  0010_employee_profile_picture_url.py  0011_remove_employee_profile_picture_url.py  0012_alter_employee_email.py  0013_alter_employee_profile_picture.py  0014_alter_employee_profile_picture.py  0015_remove_employee_department_and_more.py  0016_alter_employee_description.py
organization/: admin.py  apps.py  choices.py  forms.py  models.py  schema.py  signals.py  tests.py  types.py  urls.py  views.py
organization/migrations/: 0001_initial.py  0002_department_designation.py  (+12 more)
root/: asgi.py  schema.py  settings.py  urls.py  utils.py  views.py  wsgi.py
seeds/: organization_user.json
service/: admin.py  models.py
(+4 files in other folders)
